kubernetes/uat/whoami/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    run: whoami
spec:
  replicas: 2
  selector:
    matchLabels:
      run: whoami
  template:
    metadata:
      labels:
        run: whoami
    spec:
      serviceAccountName: whoami
      containers:
        - name: whoami
          image: traefik/whoami:v1.10.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 512m
              memory: 256Mi
            requests:
              cpu: 128m
              memory: 128Mi
