kubernetes/uat/whoami/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    external-dns.alpha.kubernetes.io/hostname: whoami.uat.hq.kronops.io
spec:
  ingressClassName: "nginx"
  rules:
    - host: whoami.uat.hq.kronops.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 8080
